# backend_carcas

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 11582d07eb79_.py  26733b1140e6_.py  28d5b12e2eb9_.py  6dcb4c9bf4f7_.py  84295f585193_.py  9b5b182b6cd3_.py  ab019317f863_.py  b3d2ec3a497c_.py  e0f4a529f507_.py  f14fa41ce13f_.py
app/: main.py  settings.py
app/helpers/: db.py  exceptions.py  jwt.py  middlewares.py
app/routers/auth/: auth.py  crud.py  models.py  schemas.py
