[tool.poetry]
name = "base-carcas"
version = "0.1.0"
description = ""
authors = ["Harut <har.avetisyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
